# imagesize

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
benches/: parse_benchmark.rs
src/: lib.rs  test.rs  util.rs
src/container/: atc.rs  dds.rs  heif.rs  mod.rs  pkm.rs  pvrtc.rs
src/formats/: aesprite.rs  astc.rs  avif.rs  bmp.rs  dds.rs  eac.rs  etc2.rs  exr.rs  farbfeld.rs  gif.rs  hdr.rs  heif.rs  ico.rs  ilbm.rs  jpeg.rs  jxl.rs  ktx2.rs  mod.rs  png.rs  pnm.rs  psd.rs  pvrtc.rs  tga.rs  tiff.rs  webp.rs
test/: IMG_0007.heic
test/fuzz_crashes/: id000000,sig06,src000065,time5826,ophavoc,rep8  id000000,sig06,src000075,time7852+000131,opsplice,rep16  id000000,sig06,src000082,time6965,ophavoc,rep4  id000001,sig06,src000096,time7390,ophavoc,rep4  id000002,sig06,src000100,time7683+000047,opsplice,rep2  id000002,sig06,src000100,time8729,ophavoc,rep4  id000003,sig06,src000067,time6017,ophavoc,rep32  id000003,sig06,src000078,time40583,oparith8,pos10,val+3  id000003,sig06,src000100,time8757,ophavoc,rep2  id000004,sig06,src000095,time49594,opint32,pos74,valbe+1024  id000005,sig06,src000067,time6070+000068,opsplice,rep8  id000005,sig06,src000102,time7826,ophavoc,rep4  id000005,sig06,src000104,time53428,opflip1,pos18  id000005,sig06,src000133,time9140,ophavoc,rep2  id000006,sig06,src000067,time6077+000068,opsplice,rep8  id000006,sig06,src000102,time7953+000091,opsplice,rep4  id000006,sig06,src000104,time55752,ophavoc,rep4  id000007,sig06,src000094,time7622,ophavoc,rep2  id000007,sig06,src000102,time7979+000042,opsplice,rep2  id000007,sig06,src000106,time55924,opflip1,pos16  id000007,sig06,src000133,time9167,ophavoc,rep4  (+46 more)
test/jxl/: err_box.jxl  err_signature.jxl  (+7 more)
tests/: aseprite.rs  astc.rs  avif.rs  blob.rs  bmp.rs  container_compressions.rs  dds.rs  eac.rs  etc2.rs  exr.rs  farbfeld.rs  fuzz.rs  gif.rs  hdr.rs  heic.rs  helper_methods.rs  ico.rs  ilbm.rs  jpeg.rs  jxl.rs  ktx2.rs  png.rs  pnm.rs  psd.rs  pvrtc.rs  qoi.rs  reader.rs  tga.rs  tif.rs  vtf.rs  webp.rs
(+157 files in other folders)
