[package]
name = "imagesize"
version = "0.8.6"
authors = ["Maid Dog <maiddogsrl@gmail.com>"]
description = "Quick probing of image dimensions without loading the entire file."
documentation = "https://docs.rs/imagesize"
repository = "https://github.com/Roughsketch/imagesize"
readme = "README.md"
keywords = ["image", "size"]
categories = ["multimedia", "multimedia::images"]
license = "MIT"
exclude = ["test/*"]

[dependencies]
